# ai-engineering

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/conversational-bi/: README.md
