[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
main = [
    "chromadb>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "mypy>=1.18.2",
    "openai>=1.109.1",
    "openai-agents>=0.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
]

[tool.setuptools]
py-modules = ["src"]
packages = ["src"]
include-package-data = true

[tool.ruff]
select = ["I"]

[tool.ruff.lint]
extend-select = ["B"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    ".env",
    "venv",
    "notebooks",
]
